--- a/style.css
+++ b/style.css
@@ -8,6 +8,8 @@
 html, body {
     height: 100%;
     width: 100%;
+    scroll-behavior: smooth;
+    scroll-padding-top: 10vh;
 }
 
 /* -----------------------------------CABEÇALHO---------------------------------------------------- */
@@ -103,7 +105,7 @@ ul li .a:hover::after {
 
 .home {
     width: 100%;
-    height: 100%;
+    height: 100vh;
     background: url(./imgs/architect-g71f9ffd4a_1920.jpg) no-repeat center center;
     display: flex;
     flex-direction: column;
@@ -127,7 +129,7 @@ ul li .a:hover::after {
     color: #fff;
 }
 
-.home-content .texto p span {
+.home-content .texto h1 span {
     color: #ff4500;
 }
 
@@ -163,25 +165,22 @@ ul li .a:hover::after {
 
 .projetos {
     width: 100%;
-    height: 110vh;
+    height: 100vh;
     background: linear-gradient(153deg, #222222 63.21%, #333333 63.21%);
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    padding-top: 10vh;
 }
 
-.projetos h1 {
+.projetos h2 {
     font-family: 'Ubuntu', sans-serif;
     font-weight: 500;
     font-size: 70px;
-    margin-top: -12vh;
-    margin-bottom: 30px;
+    margin-bottom: 15px;
     color: #fff;
 }
 
-.projetos h1 span {
+.projetos h2 span {
     color: #ff4500;
 }
 
@@ -279,28 +278,27 @@ ul li .a:hover::after {
     top: 1245px;
     left: 250px; */
 
-    height: 110vh;
+    height: 100vh;
     width: 100%;
     background: url(./imgs/bg2-orange.jpg) no-repeat center;
     background-size: cover;
-    padding-top: 10vh;
 }
 
-.equipe h1 {
+.equipe h2 {
     font-family: 'Ubuntu', sans-serif;
     font-size: 70px;
     font-weight: 500;
     color: #fff;
     text-align: center;
-    margin-bottom: 20px;
+    margin-bottom: 12px;
 }
 
-.equipe h1 span {
+.equipe h2 span {
     color: #fff;
 }
 
 .cards {
-    margin: 15px 30px 0px 30px;
+    margin: 0 30px 0px 30px;
     height: 70%;
     display: flex;
     justify-content: space-between;
@@ -347,13 +345,13 @@ ul li .a:hover::after {
 .sobre {
     width: 100%;
     height: 100vh;
-    padding: 10vh;
     background: linear-gradient(153deg, #c9c8c8 63.21%, #d8d8d8f3 63.21%);
 
     display: flex;
+    padding-bottom: 40px;
 }
 
-.sobre h1 {
+.sobre h2 {
     width: 45%;
 
     color: #ff4500;
@@ -431,14 +429,14 @@ ul li .a:hover::after {
     font-size: 20px;
 }
 
-/* ---------------------------------------SOBRE--------------------------------------------------- */
+/* ---------------------------------------CONTATO------------------------------------------------- */
 
 .contact {
     width: 100%;
-    height: 110vh;
+    height: 100vh;
     background-color: #ff4500;
     display: flex;
-    padding: 15vh 50px 50px 50px;
+    padding: 10px 50px 40px 50px;
 }
 
 .contact .form {
@@ -491,7 +489,8 @@ ul li .a:hover::after {
 .form textarea {
     margin-left: 50px;
     width: 500px;
-    height: 70px;
+    height: 120px;
+    resize: vertical;
 
     background-color: #c9c8c8;
     color: #222222;
@@ -541,7 +540,7 @@ ul li .a:hover::after {
     font-family: 'Ubuntu', sans-serif;    
 }
 
-.text h1 {
+.text h2 {
     font-size: 50px;
     font-weight: 700;
 }
@@ -631,4 +630,8 @@ ul li .a:hover::after {
 
 .options a:hover {
     opacity: .9;
+}
+
+@media (max-width: 918px) {
+    
 }
